@@ -164,6 +164,9 @@ print_song(const struct mpd_song *song)
 	if (mpd_song_get_duration(song) > 0)
 		LOG_INFO("time: %i", mpd_song_get_duration(song));
 
+	if (mpd_song_get_duration_ms(song) > 0)
+		LOG_INFO("duration: %i", mpd_song_get_duration_ms(song));
+
 	LOG_INFO("pos: %u", mpd_song_get_pos(song));
 }
 
